--- a/app/package.json
+++ b/app/package.json
@@ -10,19 +10,20 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "tiptap": "^1.26.5",
-    "tiptap-extensions": "^1.28.6",
+    "eth-sig-util": "^2.5.3",
     "identicon.js": "^2.3.3",
     "js-sha256": "^0.9.0",
     "moment": "^2.24.0",
     "timeago.js": "^4.0.0-beta.2",
+    "tiptap": "^1.26.5",
+    "tiptap-extensions": "^1.28.6",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-chat-scroll": "^1.3.5",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.16",
-    "vue-chat-scroll": "^1.3.5",
     "vuex": "^3.0.1",
-    "web3": "1.0.0-beta.36"
+    "web3": "^1.2.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
